fix background cover on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@ html,body,div,header,section,footer,nav,p,h1,h3,a,img,li,ul {
 body {
 	font-family: 'YanoneKaffeesatz', Helvetica, Arial;
 	background: url('../img/bg.jpg') no-repeat center center fixed; 
+	-webkit-background-size: 100%;
+	-moz-background-size: 100%;
+	-o-background-size: 100%;
+	background-size: 100%;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -125,8 +129,12 @@ body {
 
 @media only screen and (max-width: 500px) {
 	#card { 
-		margin: 0;
+		margin-top: 5%;
 		width: 100%;
+		box-shadow: 0px 0px 100px 5px #000;
+		-moz-box-shadow: 0px 0px 100px 5px #000;
+		-webkit-box-shadow: 0px 0px 100px 5px #000;
+		border-bottom: 1px solid #cecece;
 	}
 	#card footer li {
 	width: 20%;
